// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a counter 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 123,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`dec 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Counter created.",
  "Dec (amount=1).",
  "Dec (amount=1).",
  "Dec (amount=10).",
  "Dec (amount=10).",
  "wingsdk.cloud.Counter deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`dec 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 123,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`inc 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Counter created.",
  "Inc (amount=1).",
  "Inc (amount=1).",
  "Inc (amount=10).",
  "Inc (amount=10).",
  "wingsdk.cloud.Counter deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`inc 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 123,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`key dec 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Counter created.",
  "Dec (amount=1, key: my-key).",
  "Dec (amount=1, key: my-key).",
  "Dec (amount=10, key: my-key).",
  "Dec (amount=10, key: my-key).",
  "wingsdk.cloud.Counter deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`key dec 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 0,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`key inc 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Counter created.",
  "Inc (amount=1, key: my-key).",
  "Inc (amount=1, key: my-key).",
  "Inc (amount=10, key: my-key).",
  "Inc (amount=10, key: my-key).",
  "wingsdk.cloud.Counter deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`key inc 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 0,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`key set to new value 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Counter created.",
  "Set (value=5, key: my-key).",
  "Peek (value=5, key: my-key).",
  "wingsdk.cloud.Counter deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`key set to new value 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 0,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`set to new value 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Counter created.",
  "Set (value=5).",
  "Peek (value=5).",
  "wingsdk.cloud.Counter deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`set to new value 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_counter",
        "props": {
          "initial": 123,
        },
        "type": "wingsdk.cloud.Counter",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_counter": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed atomic counter",
            "title": "Counter",
          },
          "id": "my_counter",
          "path": "root/my_counter",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
